[project]
name = "tutorial-codebase-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.0",
    "google-cloud-aiplatform>=1.25.0",
    "google-genai>=1.9.0",
    "pocketflow>=0.0.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]
