[project]
name = "tutorial-codebase-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "google-genai>=1.10.0",
    "markdown>=3.7",
    "pocketflow>=0.0.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
